# unbound_exporter

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  build_static.sh  docker-compose.yml  droplist.zone  go.mod  go.sum  grafana-dashboard-enhanced.json  integration_test.go  main.go  nfpm.yaml  unbound-example.conf  unbound_exporter.go  unbound_exporter_test.go
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  integration.yaml  release.yml  tags.yaml  test.yaml
configs/: unbound-example.conf
contrib/: README.md  unbound-cert-setup.sh  unbound_exporter.service
debian/: changelog  control  rules  watch
debian/upstream/: metadata
exporter/: exporter_test.go  unbound_exporter.go
exporter/testdata/: metrics.txt
integration/: README.md  docker-compose-tcp.yml  docker-compose-tls.yml  docker-compose-unix.yml  docker-compose.yml  integration_test.go  setup-certs.sh  setup-unbound-config.sh  setup.Containerfile  start-exporter.sh  unbound.Containerfile
integration/configs/: droplist.zone  generate-certs.sh  remote-control-tcp.conf  remote-control-tls.conf  remote-control-unix.conf  unbound-example.conf  unbound-tcp.conf  unbound-tls.conf
internal/exporter/: exporter.go  exporter_test.go
metrics/: metrics_server.go  metrics_server_test.go
util/: buildVars.go
